// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseList component 傳入只有1個expense的expenses陣列 1`] = `
<div>
  <h1>
    Expense List
  </h1>
  <ExpenseListItem
    amount={195}
    createdAt={"1970-01-01T00:00:00.000Z"}
    description="Gum"
    id="1"
    key="1"
    note=""
  />
</div>
`;

exports[`ExpenseList component 傳入空的expenses陣列 1`] = `
<div>
  <h1>
    Expense List
  </h1>
  <p>
    無資料
  </p>
</div>
`;
